Cleared the bugs in navList that is visibility effect when the user scrolls and clicks the outer screen when the screen is lower than 960px && also added small UI changes at the footer

--- a/src/components/medium.css
+++ b/src/components/medium.css
@@ -86,7 +86,7 @@ nav a{
     max-width: 100%;
     height: 40vh;
     position: absolute;
-    top: 12vh;
+    top: 8vh;
     background-color: rgb(96, 96, 96);
     backdrop-filter: blur(5px);
     flex-direction: column;
